hphp/hack/test/typecheck/dynamic_new_object.php.exp
File "dynamic_new_object.php", line 6, characters 12-15:
Was expecting a class, but got a string (Typing[4026])
